--- a/data/docs-manifest.json
+++ b/data/docs-manifest.json
@@ -82,8 +82,6 @@
       "role": "líder de soporte",
       "name": "control de versiones",
       "version": "1.0",
-      "phase": "iniciación",
-      "notes": "",
       "filename": "control-de-versiones.pdf",
       "contentType": "application/pdf",
       "updatedAt": "2025-08-09",
@@ -132,8 +130,6 @@
       "role": "líder de soporte",
       "name": "control de versiones",
       "version": "1.1",
-      "phase": "iniciación",
-      "notes": "update",
       "filename": "control-de-versionesV1.1.pdf",
       "contentType": "application/pdf",
       "updatedAt": "2025-08-14",
@@ -165,8 +161,6 @@
       "role": "líder de soporte",
       "name": "control de versiones",
       "version": "1.2",
-      "phase": "iniciación",
-      "notes": "update",
       "filename": "control-de-versionesV1.2.pdf",
       "contentType": "application/pdf",
       "updatedAt": "2025-08-14",
@@ -197,8 +191,6 @@
       "role": "líder de soporte",
       "name": "control de versiones",
       "version": "1.3",
-      "phase": "iniciación",
-      "notes": "update",
       "filename": "control-de-versionesV1.3.pdf",
       "contentType": "application/pdf",
       "updatedAt": "2025-08-14",
@@ -219,8 +211,6 @@
       "role": "líder de soporte",
       "name": "control de versiones",
       "version": "1.4",
-      "phase": "iniciación",
-      "notes": "update",
       "filename": "control-de-versionesV1.4.pdf",
       "contentType": "application/pdf",
       "updatedAt": "2025-08-15",
@@ -285,8 +275,6 @@
       "role": "líder de soporte",
       "name": "control de versiones",
       "version": "1.5",
-      "phase": "iniciación",
-      "notes": "update",
       "filename": "control-de-versionesV1.5.pdf",
       "contentType": "application/pdf",
       "updatedAt": "2025-08-16",
@@ -318,8 +306,6 @@
       "role": "líder de soporte",
       "name": "control de versiones",
       "version": "1.6",
-      "phase": "iniciación",
-      "notes": "update",
       "filename": "control-de-versionesV1.6.pdf",
       "contentType": "application/pdf",
       "updatedAt": "2025-08-16",
@@ -329,8 +315,6 @@
       "role": "líder de soporte",
       "name": "control de versiones",
       "version": "1.6",
-      "phase": "iniciación",
-      "notes": "update",
       "filename": "control-de-versionesV1.6.pdf",
       "contentType": "application/pdf",
       "updatedAt": "2025-08-16",
@@ -454,6 +438,15 @@
       "contentType": "application/pdf",
       "updatedAt": "2025-08-27",
       "url": "./docs/lider-de-equipo/estrategia/dt_ptl_controlAsignaciones v2.0.pdf"
+    },
+    {
+      "role": "líder de soporte",
+      "name": "control de versiones",
+      "version": "1.7",
+      "filename": "control-de-versionesV1.7.pdf",
+      "contentType": "application/pdf",
+      "updatedAt": "2025-08-27",
+      "url": "./docs/lider-de-equipo/control-de-versiones/control-de-versionesV1.7.pdf"
     }
   ]
 }
