--- a/data/templates-manifest.json
+++ b/data/templates-manifest.json
@@ -118,7 +118,7 @@
       "filename": "Plantilla-plan-de-administracion-de-configuracion.docx",
       "contentType": "application/vnd.openxmlformats-officedocument.wordprocessingml.document",
       "updatedAt": "2025-08-27",
-      "url": "./docs/plantillas/Plantilla-plan-de-administracion-de-configuracion.docx",
+      "url": "./docs/plantillas/Plantilla-plan-de-administración-de-configuración.docx",
       "tags": ["documentación", "estrategia"]
     },
     {
