--- a/data/docs-manifest.json
+++ b/data/docs-manifest.json
@@ -327,7 +327,7 @@
       "filename": "2.0_Bitacora_Tiempo.pdf",
       "contentType": "application/pdf",
       "updatedAt": "2025-08-27",
-      "url": "./docs/lider-de-desarrollo/2.0_Bitacora_Tiempo.pdf"
+      "url": "./docs/lider-de-desarrollo/bitacoras-de-tiempo/2.0_Bitacora_Tiempo.pdf"
     },
     {
       "role": "líder de desarrollo",
@@ -423,11 +423,11 @@
     {
       "role": "líder de planeación",
       "name": "bitacoras de tiempo",
-      "version": "1.0",
+      "version": "1.1",
       "filename": "BitacoraTiempoSem2_V1.0.pdf",
       "contentType": "application/pdf",
       "updatedAt": "2025-08-27",
-      "url": "./docs/lider-de-planeacion/bitacoras-de-tiempo/Bitacora_120250812.pdf"
+      "url": "./docs/lider-de-planeacion/bitacoras-de-tiempo/BitacoraTiempoSem2_V1.0.pdf"
     },
     {
       "role": "líder de planeación",
@@ -447,6 +447,27 @@
       "contentType": "application/pdf",
       "updatedAt": "2025-08-27",
       "url": "./docs/lider-de-soporte/control-de-versiones/control-de-versionesV1.7.pdf"
+    },
+    {
+      "role": "líder de calidad",
+      "name": "plan de administración de cambios",
+      "version": "1.1",
+      "phase": "estrategia",
+      "notes": "se enfatizo que el objetivo esta orientado al cambio, se corrigio la metodologia del proyecto y se especifico que el maestro de documento es utilizado para el seguimiento del plan de administracion y configuracion",
+      "filename": "1.1_Plan_Admin_Config_Cambios.pdf",
+      "contentType": "application/pdf",
+      "updatedAt": "2025-08-27",
+      "url": "./docs/lider-de-calidad/estrategia/1.1_Plan_Admin_Config_Cambios.pdf"
+    },
+    {
+      "role": "líder de soporte",
+      "name": "control de versiones",
+      "version": "1.8",
+      "notes": "update",
+      "filename": "control-de-versionesV1.8.pdf",
+      "contentType": "application/pdf",
+      "updatedAt": "2025-08-27",
+      "url": "./docs/lider-de-soporte/control-de-versiones/control-de-versionesV1.8.pdf"
     }
   ]
 }
