--- a/data/docs-manifest.json
+++ b/data/docs-manifest.json
@@ -71,7 +71,6 @@
       "role": "líder de planeación",
       "name": "control asignaciones",
       "version": "1.0",
-      "phase": "iniciación",
       "notes": "",
       "filename": "dt_ptl_controlAsignaciones.pdf",
       "contentType": "application/pdf",
@@ -170,7 +169,6 @@
       "role": "líder de planeación",
       "name": "control asignaciones",
       "version": "1.1",
-      "phase": "iniciación",
       "notes": "Se dividieron las tareas grupales a tareas individuales",
       "filename": "dt_ptl_controlAsignacionesV1.1.pdf",
       "contentType": "application/pdf",
@@ -200,7 +198,6 @@
       "role": "líder de calidad",
       "name": "log de defectos",
       "version": "1.0",
-      "phase": "iniciación",
       "notes": "Unificacion de los logs de defectos de cada Lider",
       "filename": "logDefectosV1.0.pdf",
       "contentType": "application/pdf",
@@ -220,7 +217,6 @@
       "role": "líder de planeación",
       "name": "control asignaciones",
       "version": "1.2",
-      "phase": "iniciación",
       "notes": "Actualizacion del nombre del proyecto",
       "filename": "dt_ptl_controlAsignacionesV1.2.pdf",
       "contentType": "application/pdf",
@@ -264,7 +260,6 @@
       "role": "líder de calidad",
       "name": "log de defectos",
       "version": "1.1",
-      "phase": "iniciación",
       "notes": "Se añadio un nuevo Log",
       "filename": "logDefectosV1.1.pdf",
       "contentType": "application/pdf",
@@ -433,7 +428,6 @@
       "role": "líder de planeación",
       "name": "control asignaciones",
       "version": "2.0",
-      "phase": "estrategia",
       "filename": "dt_ptl_controlAsignaciones v2.0.pdf",
       "contentType": "application/pdf",
       "updatedAt": "2025-08-27",
@@ -468,6 +462,194 @@
       "contentType": "application/pdf",
       "updatedAt": "2025-08-27",
       "url": "./docs/lider-de-soporte/control-de-versiones/control-de-versionesV1.8.pdf"
+    },
+    {
+      "role": "líder de calidad",
+      "name": "log de defectos",
+      "version": "1.3",
+      "notes": "update",
+      "filename": "logDefectos_v.1.3.pdf",
+      "contentType": "application/pdf",
+      "updatedAt": "2025-09-03",
+      "url": "./docs/lider-de-calidad/logs-de-defectos/logDefectos_v.1.3.pdf"
+    },
+    {
+      "role": "líder de calidad",
+      "name": "actas de reuniones",
+      "version": "1.0",
+      "phase": "requerimientos",
+      "notes": "update",
+      "filename": "1.0_Acta_020925.pdf",
+      "contentType": "application/pdf",
+      "updatedAt": "2025-09-03",
+      "url": "./docs/lider-de-calidad/actas-de-reuniones/1.0_Acta_020925.pdf"
+    },
+    {
+      "role": "líder de calidad",
+      "name": "bitacoras de tiempo",
+      "version": "3.0",
+      "notes": "update",
+      "filename": "Bitacora03_30082025.pdf",
+      "contentType": "application/pdf",
+      "updatedAt": "2025-08-30",
+      "url": "./docs/lider-de-calidad/bitacoras-de-tiempo/Bitacora03_30082025.pdf"
+    },
+    {
+      "role": "líder de calidad",
+      "name": "script",
+      "version": "1.0",
+      "phase": "requerimientos",
+      "notes": "create",
+      "filename": "1.0_SCRIPT_Definicion_de_requerimientos.pdf",
+      "contentType": "application/pdf",
+      "updatedAt": "2025-08-30",
+      "url": "./docs/lider-de-calidad/requerimientos/1.0_SCRIPT_Definicion_de_requerimientos.pdf"
+    },
+    {
+      "role": "líder de calidad",
+      "name": "plan de administración y gestión de requerimientos",
+      "version": "1.0",
+      "phase": "requerimientos",
+      "notes": "create",
+      "filename": "Plan-de-administración-y-gestión-de-requerimientos.pdf",
+      "contentType": "application/pdf",
+      "updatedAt": "2025-09-03",
+      "url": "./docs/lider-de-calidad/requerimientos/Plan-de-administración-y-gestión-de-requerimientos.pdf"
+    },
+    {
+      "role": "líder de calidad",
+      "name": "detalle de casos de uso",
+      "version": "1.0",
+      "phase": "requerimientos",
+      "notes": "create",
+      "filename": "1.0_DetalleCasosUso.pdf",
+      "contentType": "application/pdf",
+      "updatedAt": "2025-09-03",
+      "url": "./docs/lider-de-calidad/requerimientos/1.0_DetalleCasosUso.pdf"
+    },
+    {
+      "role": "líder de calidad",
+      "name": "lista de chequeo",
+      "version": "1.0",
+      "phase": "requerimientos",
+      "notes": "create",
+      "filename": "Lista-de-chequeo.pdf",
+      "contentType": "application/pdf",
+      "updatedAt": "2025-09-03",
+      "url": "./docs/lider-de-calidad/requerimientos/Lista-de-chequeo.pdf"
+    },
+    {
+      "role": "líder de calidad",
+      "name": "Especificación de requerimientos (SRS)",
+      "version": "1.0",
+      "phase": "requerimientos",
+      "notes": "create",
+      "filename": "Especificación-de-requerimientos(SRS).pdf",
+      "contentType": "application/pdf",
+      "updatedAt": "2025-09-03",
+      "url": "./docs/lider-de-calidad/requerimientos/Especificación-de-requerimientos(SRS).pdf"
+    },
+    {
+      "role": "líder de calidad",
+      "name": "Escenarios de calidad",
+      "version": "1.0",
+      "phase": "requerimientos",
+      "notes": "create",
+      "filename": "1.0_EscenariosCalidad.pdf",
+      "contentType": "application/pdf",
+      "updatedAt": "2025-09-03",
+      "url": "./docs/lider-de-calidad/requerimientos/1.0_EscenariosCalidad.pdf"
+    },
+    {
+      "role": "líder de desarrollo",
+      "name": "Bitácora de tiempo",
+      "version": "3.0",
+      "notes": "create",
+      "filename": "3.0_Bitacora_Tiempo.pdf",
+      "contentType": "application/pdf",
+      "updatedAt": "2025-09-03",
+      "url": "./docs/lider-de-calidad/bitacoras-de-tiempo/Bitacora01_08082025.pdf"
+    },
+    {
+      "role": "líder de desarrollo",
+      "name": "Bitácora de tiempo",
+      "version": "3.0",
+      "notes": "create",
+      "filename": "3.0_Bitacora_Tiempo.pdf",
+      "contentType": "application/pdf",
+      "updatedAt": "2025-08-29",
+      "url": "./docs/lider-de-calidad/bitacoras-de-tiempo/Bitacora01_08082025.pdf"
+    },
+    {
+      "role": "líder de equipo",
+      "name": "Soporte de realización",
+      "version": "1.0",
+      "phase": "requerimientos",
+      "notes": "create",
+      "filename": "Soporte-de-realizacion.pdf",
+      "contentType": "application/pdf",
+      "updatedAt": "2025-08-29",
+      "url": "./docs/lider-de-equipo/requerimientos/Soporte-de-realizacion.pdf"
+    },
+    {
+      "role": "líder de equipo",
+      "name": "bitacoras de tiempo",
+      "version": "3.0",
+      "notes": "create",
+      "filename": "1.0_bitacora_27_082025.doc.pdf",
+      "contentType": "application/pdf",
+      "updatedAt": "2025-09-03",
+      "url": "./docs/lider-de-equipo/bitacoras-de-tiempo/1.0_bitacora_27_082025.doc.pdf"
+    },
+    {
+      "role": "líder de planeación",
+      "name": "control asignaciones",
+      "version": "3.0",
+      "notes": "create",
+      "filename": "dt_ptl_controlAsignacionesV3.0.pdf",
+      "contentType": "application/pdf",
+      "updatedAt": "2025-09-03",
+      "url": "./docs/lider-de-planeacion/dt_ptl_controlAsignacionesV3.0.pdf"
+    },
+    {
+      "role": "líder de planeación",
+      "name": "bitacoras de tiempo",
+      "version": "1.2",
+      "notes": "create",
+      "filename": "BitacoraTiempoSem3_V1.0.pdf",
+      "contentType": "application/pdf",
+      "updatedAt": "2025-09-03",
+      "url": "./docs/lider-de-planeacion/bitacoras-de-tiempo/BitacoraTiempoSem3_V1.0.pdf"
+    },
+    {
+      "role": "líder de soporte",
+      "name": "control de versiones",
+      "version": "1.9",
+      "notes": "update",
+      "filename": "control-de-versionesV1.9.pdf",
+      "contentType": "application/pdf",
+      "updatedAt": "2025-09-03",
+      "url": "./docs/lider-de-soporte/control-de-versiones/control-de-versionesV1.9.pdf"
+    },
+    {
+      "role": "líder de soporte",
+      "name": "bitacoras de tiempo",
+      "version": "1.2",
+      "notes": "update",
+      "filename": "bitacoras-de-tiempoV1.2.pdf",
+      "contentType": "application/pdf",
+      "updatedAt": "2025-09-03",
+      "url": "./docs/lider-de-soporte/bitacora-de-tiempo/bitacoras-de-tiempoV1.2.pdf"
+    },
+    {
+      "role": "líder de soporte",
+      "name": "bitacoras de tiempo",
+      "version": "1.3",
+      "notes": "update",
+      "filename": "control-de-versionesV1.3.pdf",
+      "contentType": "application/pdf",
+      "updatedAt": "2025-09-03",
+      "url": "./docs/lider-de-soporte/bitacora-de-tiempo/bitacoras-de-tiempoV1.3.pdf"
     }
   ]
 }
