--- a/data/docs-manifest.json
+++ b/data/docs-manifest.json
@@ -628,6 +628,132 @@
       "contentType": "application/pdf",
       "updatedAt": "2025-09-03",
       "url": "./docs/lider-de-soporte/bitacora-de-tiempo/bitacoras-de-tiempoV1.3.pdf"
+    },
+    {
+      "role": "líder de calidad",
+      "name": "plan de administración y gestión de requerimientos",
+      "version": "1.1",
+      "phase": "requerimientos",
+      "notes": "update",
+      "filename": "plan-de-administración-y-gestión-de-requerimientosV1.1.pdf",
+      "contentType": "application/pdf",
+      "updatedAt": "2025-09-03",
+      "url": "./docs/lider-de-calidad/requerimientos/plan-de-administración-y-gestión-de-requerimientosV1.1.pdf"
+    },
+    {
+      "role": "líder de calidad",
+      "name": "",
+      "version": "1.1",
+      "phase": "requerimientos",
+      "notes": "update",
+      "filename": "plan-de-administración-y-gestión-de-requerimientosV1.1.pdf",
+      "contentType": "application/pdf",
+      "updatedAt": "2025-09-03",
+      "url": "./docs/lider-de-calidad/requerimientos/plan-de-administración-y-gestión-de-requerimientosV1.1.pdf"
+    },
+    {
+      "role": "líder de calidad",
+      "name": "Lista de chequeo",
+      "version": "1.0",
+      "phase": "requerimientos",
+      "notes": "update",
+      "filename": "Lista-de-chequeoV1.0.pdf",
+      "contentType": "application/pdf",
+      "updatedAt": "2025-09-03",
+      "url": "./docs/lider-de-calidad/requerimientos/Lista-de-chequeoV1.0.pdf"
+    },
+    {
+      "role": "líder de calidad",
+      "name": "Plan de aseguramiento de calidad basado en defectos",
+      "version": "1.0",
+      "phase": "planeacion",
+      "notes": "update",
+      "filename": "plan-de-aseguramiento-de-calidad-basado-en-defectos.pdf",
+      "contentType": "application/pdf",
+      "updatedAt": "2025-09-03",
+      "url": "./docs/lider-de-calidad/planeacion/plan-de-aseguramiento-de-calidad-basado-en-defectos.pdf"
+    },
+    {
+      "role": "líder de calidad",
+      "name": "bitacoras de tiempo",
+      "version": "4.0",
+      "notes": "update",
+      "filename": "Bitacora04_06092025.pdf",
+      "contentType": "application/pdf",
+      "updatedAt": "2025-09-03",
+      "url": "./docs/lider-de-calidad/bitacoras-de-tiempo/Bitacora04_06092025.pdf"
+    },
+    {
+      "role": "líder de desarrollo",
+      "name": "bitacoras de tiempo",
+      "version": "4.0",
+      "notes": "update",
+      "filename": "4.0_Bitacora_Tiempo.pdf",
+      "contentType": "application/pdf",
+      "updatedAt": "2025-09-03",
+      "url": "./docs/lider-de-desarrollo/bitacoras-de-tiempo/4.0_Bitacora_Tiempo.pdf"
+    }
+    ,
+    {
+      "role": "líder de desarrollo",
+      "name": "bitacoras de tiempo",
+      "version": "5.0",
+      "notes": "update",
+      "filename": "5.0_Bitacora_Tiempo.pdf",
+      "contentType": "application/pdf",
+      "updatedAt": "2025-09-03",
+      "url": "./docs/lider-de-desarrollo/bitacoras-de-tiempo/5.0_Bitacora_Tiempo.pdf"
+    },
+    {
+      "role": "líder de planeación",
+      "name": "bitacoras de tiempo",
+      "version": "4.0",
+      "notes": "update",
+      "filename": "BitacoraTiempoSem4_V1.0.pdf",
+      "contentType": "application/pdf",
+      "updatedAt": "2025-09-03",
+      "url": "./docs/lider-de-planeacion/bitacoras-de-tiempo/BitacoraTiempoSem4_V1.0.pdf"
+    },
+    {
+      "role": "líder de planeación",
+      "name": "bitacoras de tiempo",
+      "version": "5.0",
+      "notes": "update",
+      "filename": "BitacoraTiempoSem5_V1.0.pdf",
+      "contentType": "application/pdf",
+      "updatedAt": "2025-09-03",
+      "url": "./docs/lider-de-planeacion/bitacoras-de-tiempo/BitacoraTiempoSem5_V1.0.pdf"
+    },
+    {
+      "role": "líder de calidad",
+      "name": "log de defectos",
+      "version": "1.9",
+      "notes": "update",
+      "filename": "logDefectos_v.1.9.pdf",
+      "contentType": "application/pdf",
+      "updatedAt": "2025-09-03",
+      "url": "./docs/lider-de-calidad/logs-de-defectos/logDefectos_v.1.9.pdf"
+    },
+    {
+      "role": "líder de planeación",
+      "name": "control asignaciones",
+      "version": "4.0",
+      "notes": "update",
+      "filename": "dt_ptl_controlAsignacionesV4.0.pdf",
+      "contentType": "application/pdf",
+      "updatedAt": "2025-09-03",
+      "url": "./docs/lider-de-planeacion/dt_ptl_controlAsignacionesV4.0.pdf"
+    },
+    {
+      "role": "líder de calidad",
+      "name": "Especificación de requerimientos (SRS)",
+      "version": "1.3",
+      "phase": "requerimientos",
+      "notes": "update",
+      "filename": "Especificación-de-requerimientos(SRS)V1.3.pdf",
+      "contentType": "application/pdf",
+      "updatedAt": "2025-09-03",
+      "url": "./docs/lider-de-calidad/requerimientos/Especificación-de-requerimientos(SRS)V1.3.pdf"
     }
   ]
 }
