--- a/data/docs-manifest.json
+++ b/data/docs-manifest.json
@@ -540,7 +540,7 @@
     },
     {
       "role": "líder de desarrollo",
-      "name": "Bitácora de tiempo",
+      "name": "bitacoras de tiempo",
       "version": "3.0",
       "notes": "create",
       "filename": "3.0_Bitacora_Tiempo.pdf",
@@ -550,7 +550,7 @@
     },
     {
       "role": "líder de desarrollo",
-      "name": "Bitácora de tiempo",
+      "name": "bitacoras de tiempo",
       "version": "3.0",
       "notes": "create",
       "filename": "3.0_Bitacora_Tiempo.pdf",
@@ -692,8 +692,7 @@
       "contentType": "application/pdf",
       "updatedAt": "2025-09-03",
       "url": "./docs/lider-de-desarrollo/bitacoras-de-tiempo/4.0_Bitacora_Tiempo.pdf"
-    }
-    ,
+    },
     {
       "role": "líder de desarrollo",
       "name": "bitacoras de tiempo",
@@ -754,6 +753,152 @@
       "contentType": "application/pdf",
       "updatedAt": "2025-09-03",
       "url": "./docs/lider-de-calidad/requerimientos/Especificación-de-requerimientos(SRS)V1.3.pdf"
+    },
+    {
+      "role": "líder de calidad",
+      "name": "actas de reuniones",
+      "version": "1.0",
+      "phase": "diseño",
+      "notes": "update",
+      "filename": "1.0_Acta_090925.pdf",
+      "contentType": "application/pdf",
+      "updatedAt": "2025-09-03",
+      "url": "./docs/lider-de-calidad/actas-de-reuniones/1.0_Acta_090925.pdf"
+    },
+    {
+      "role": "líder de calidad",
+      "name": "bitacoras de tiempo",
+      "version": "5.0",
+      "notes": "update",
+      "filename": "Bitacora05_13092025.pdf",
+      "contentType": "application/pdf",
+      "updatedAt": "2025-09-03",
+      "url": "./docs/lider-de-calidad/bitacoras-de-tiempo/Bitacora05_13092025.pdf"
+    },
+    {
+      "role": "líder de calidad",
+      "name": "scripts",
+      "version": "1.0",
+      "phase": "diseño",
+      "notes": "update",
+      "filename": "1.0_SCRIPT_Fase_Diseño.pdf",
+      "contentType": "application/pdf",
+      "updatedAt": "2025-09-03",
+      "url": "./docs/lider-de-calidad/scripts/1.0_SCRIPT_Fase_Diseño.pdf"
+    },
+    {
+      "role": "líder de calidad",
+      "name": "Especificación de diseño de software",
+      "version": "1.0",
+      "phase": "diseño",
+      "notes": "update",
+      "filename": "Especificación-de-diseño-de-software.pdf",
+      "contentType": "application/pdf",
+      "updatedAt": "2025-09-03",
+      "url": "./docs/lider-de-calidad/diseño/Especificación-de-diseño-de-software.pdf"
+    },
+    {
+      "role": "líder de calidad",
+      "name": "log de defectos",
+      "version": "2.0",
+      "notes": "update",
+      "filename": "logDefectos_v.2.0.pdf",
+      "contentType": "application/pdf",
+      "updatedAt": "2025-09-03",
+      "url": "./docs/lider-de-calidad/logs-de-defectos/logDefectos_v.2.0.pdf"
+    },
+    {
+      "role": "líder de calidad",
+      "name": "log de defectos codigo",
+      "version": "1.0",
+      "notes": "update",
+      "filename": "logDefectos(Código)_v.1.0.pdf",
+      "contentType": "application/pdf",
+      "updatedAt": "2025-09-03",
+      "url": "./docs/lider-de-calidad/logs-de-defectos/codigo/logDefectos(Código)_v.1.0.pdf"
+    },
+    {
+      "role": "líder de calidad",
+      "name": "plan de administración y gestión de requerimientos",
+      "version": "1.2",
+      "phase": "requerimientos",
+      "notes": "update",
+      "filename": "Plan-de-administración-y-gestión-de-requerimientosV1.2.pdf",
+      "contentType": "application/pdf",
+      "updatedAt": "2025-09-03",
+      "url": "./docs/lider-de-calidad/requerimientos/Plan-de-administración-y-gestión-de-requerimientosV1.2.pdf"
+    },
+    {
+      "role": "líder de desarrollo",
+      "name": "bitacoras de tiempo",
+      "version": "5.1",
+      "notes": "update",
+      "filename": "5.1_Bitacora_Tiempo.pdf",
+      "contentType": "application/pdf",
+      "updatedAt": "2025-09-03",
+      "url": "./docs/lider-de-desarrollo/bitacoras-de-tiempo/5.1_Bitacora_Tiempo.pdf"
+    },
+    {
+      "role": "líder de equipo",
+      "name": "bitacoras de tiempo",
+      "version": "4.0",
+      "notes": "update",
+      "filename": "1.0_NicolasMoreno_09_092025.pdf",
+      "contentType": "application/pdf",
+      "updatedAt": "2025-09-03",
+      "url": "./docs/lider-de-equipo/bitacoras-de-tiempo/1.0_NicolasMoreno_09_092025.pdf"
+    },
+    {
+      "role": "líder de equipo",
+      "name": "soporte de realización",
+      "version": "1.0",
+      "phase": "diseño",
+      "notes": "update",
+      "filename": "soporte-de-realizacion-diseño.pdf",
+      "contentType": "application/pdf",
+      "updatedAt": "2025-09-03",
+      "url": "./docs/lider-de-equipo/diseño/soporte-de-realizacion-diseño.pdf"
+    },
+    {
+      "role": "líder de planeación",
+      "name": "EDT",
+      "version": "1.0",
+      "phase": "planeacion",
+      "notes": "update",
+      "filename": "EDT-Iniciación.pdf",
+      "contentType": "application/pdf",
+      "updatedAt": "2025-09-03",
+      "url": "./docs/lider-de-planeacion/planeacion/EDT-Iniciación.pdf"
+    },
+    {
+      "role": "líder de planeación",
+      "name": "control asignaciones",
+      "version": "5.0",
+      "notes": "update",
+      "filename": "dt_ptl_controlAsignacionesV5.0.pdf",
+      "contentType": "application/pdf",
+      "updatedAt": "2025-09-03",
+      "url": "./docs/lider-de-planeacion/dt_ptl_controlAsignacionesV5.0.pdf"
+    },
+    {
+      "role": "líder de planeación",
+      "name": "control asignaciones",
+      "version": "6.0",
+      "notes": "update",
+      "filename": "dt_ptl_controlAsignacionesV6.0.pdf",
+      "contentType": "application/pdf",
+      "updatedAt": "2025-09-03",
+      "url": "./docs/lider-de-planeacion/dt_ptl_controlAsignacionesV6.0.pdf"
+    },
+    {
+      "role": "líder de soporte",
+      "name": "control de versiones",
+      "version": "2.0",
+      "notes": "update",
+      "filename": "control-de-versionesV2.0.pdf",
+      "contentType": "application/pdf",
+      "updatedAt": "2025-09-03",
+      "url": "./docs/lider-de-soporte/control-de-versiones/control-de-versionesV2.0.pdf"
     }
   ]
 }
